# rust-fps-server

./: Cargo.toml
src/: handlers.rs  main.rs  ws.rs
