[package]
name = "fps-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
warp = "0.3.6"
uuid = { version = "1.7.0", features = ["v4"] }
